--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -85,25 +85,28 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-.generic {
+
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 33px;
     color: #ffffff;
-    margin-bottom: 33px;
+}
+
+
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+    margin-bottom: 10px;
     text-align: center;
 }
 
-    
 
 
-.generic img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
 
-
-.new {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -112,17 +115,15 @@ p {
     color: #ffffff;
 }
 
-
-
-.new img {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
-.new h2 {
+
+.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 
 
 .footer {
